# dnevest

./: .gitignore  Cargo.toml  init.sh  readme.md  script.txt  web.md  Данни-вестници.xlsx
.github/workflows/: rust_build.yml
dnevest/: Cargo.toml  lint.sh  readme.md
dnevest/src/: bindings.rs  errors.rs  lib.rs  msgs.rs  response.rs
dnevest/src/newspaper/: date.rs  error.rs  frequency.rs  mod.rs  newspaper.rs  signature.rs
dnevest/src/newspaper/dto/: date.rs  mod.rs  query_newspaper.rs  signature.rs
dnevest/src/services/: error.rs  mock_host.rs  mod.rs
dnevest/wit/: world.wit
docs/: adr.md  dnevest.html  вестник.md
src/: bindings.rs  errors.rs  lib.rs  msgs.rs  response.rs
src/newspaper/: date.rs  error.rs  mod.rs  newspaper.rs  signature.rs
src/newspaper/dto/: mod.rs
src/order/: cover.rs  delivery.rs  details.rs  dto.rs  error.rs  mod.rs  waybill.rs  wish_card.rs
src/services/: error.rs  mock_host.rs  mod.rs
web/: Fetch.txt  dnevest.html  img-bg1.avif
yew_demo/: Cargo.toml  index.html
yew_demo/src/: app.rs  router.rs
yew_demo/src/components/: datepicker.rs  mod.rs
yew_demo/src/pages/: gift.rs  home.rs  mod.rs  order.rs  products.rs
