[package]
name = "dnevest"
version = "0.1.0"
edition = "2021"

[dependencies]
# This project is compatible with platform version v0.1.0.
wit-bindgen = "0.34.0"
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.0"
chrono = {version = "0.4.38", default-features = false, features = ["serde"]}
once_cell = "1.20.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
build-override = { opt-level = 3 }
debug = false
debug-assertions = false
opt-level = "s"
strip = "symbols"
rpath = false
lto = true
panic = "abort"
overflow-checks = true

[package.metadata.component]
package = "component:dnevest"

[package.metadata.component.dependencies]